grammar.txt
program ::= {statement}
statement ::= "PRINT" expression '\n'
            | "IF" comparison "THEN" {statement '\n'} "ENDIF" '\n'
            | "WHILE" comparison "REPEAT" {statement '\n'} "ENDWHILE" '\n'
            | "LABEL" ident '\n'
            | "GOTO" ident '\n'
            | "LET" ident = expression '\n'
            | "INPUT" ident '\n'
comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)+
expression ::= term {( "-" | "+" ) term}
term ::= unary {( "/" | "*" ) unary}
unary ::= ["+" | "-"] primary
primary ::= number | ident
